Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z1.out
Z1.java:16:10: compiler.err.cant.resolve: kindname.variable, teal, , 
1 error
